--- a/Relazione.tex
+++ b/Relazione.tex
@@ -120,14 +120,14 @@ Per effettuare queste nuove misure è necessario ricofigurare la posizione degli
 \renewcommand{\arraystretch}{1.5}
 \begin{tabular}{|c|c|c|c|c|}
 \hline $\textbf{f}$ & $\textbf{\Delta_\phi}$ & $|\textbf{A_v}| \ \textbf{calcolato}$ & $|\textbf{A_v}| \ \textbf{misurato}$ & $\textbf{V_u}$\\
-\hline $300Hz$ & $(1.21 \pm 0.06)*10^{-3} rad$ & $(980 \pm 39) mV$ & $prova$ & $(2.20 \pm 0.09) V$ \\
-\hline $1kHz$ & $(7.54 \pm 0.46)*10^{-4} rad$ & $(980 \pm 39) mV$ & $prova$ & $(5.70 \pm 0.21) V$ \\
-\hline $3kHz$ & $(1.70 \pm 0.22)*10^{-4} rad$ & $(980 \pm 39) mV$ & $prova$ & $(7.80 \pm 0.25) V$ \\
-\hline $10kHz$ & $(5.03 \pm 0.22)*10^{-1} rad$ & $(980 \pm 39) mV$ & $prova$ & $(7.10 \pm 0.23) V$ \\
-\hline $30kHz$ & $(1.13 \pm 0.06) rad$ & $(980 \pm 39) mV$ & $prova$ & $(4.00 \pm 0.18) V$ \\
-\hline $100kHz$ & $(1.89 \pm 0.10) rad$ & $(200 \pm 8.8) mV$ & $prova$ & $(280 \pm 10) mV$ \\
-\hline $300kHz$ & $(3.77 \pm 0.17) rad$ & $(200 \pm 8.8) mV$ & $prova$ & $(72.0 \pm 3.4) mV$ \\
-\hline $1MHz$ & $(3.14 \pm 0.19) rad$ & $(200 \pm 8.8) mV$ & $prova$ & $(9.00 \pm 0.67) mV$ \\
+\hline $300Hz$ & $(1.21 \pm 0.06)*10^{-3} rad$ & $(980 \pm 39) mV$ & $ (2.24 \pm 0.28) $ & $(2.20 \pm 0.09) V$ \\
+\hline $1kHz$ & $(7.54 \pm 0.46)*10^{-4} rad$ & $(980 \pm 39) mV$ & $ (5.82 \pm 0.45) $ & $(5.70 \pm 0.21) V$ \\
+\hline $3kHz$ & $(1.70 \pm 0.22)*10^{-4} rad$ & $(980 \pm 39) mV$ & $ (7.96 \pm 0.57) $ & $(7.80 \pm 0.25) V$ \\
+\hline $10kHz$ & $(5.03 \pm 0.22)*10^{-1} rad$ & $(980 \pm 39) mV$ & $ (7.24 \pm 0.51) $ & $(7.10 \pm 0.23) V$ \\
+\hline $30kHz$ & $(1.13 \pm 0.06) rad$ & $(980 \pm 39) mV$ & $ (4.08 \pm 0.34) $ & $(4.00 \pm 0.18) V$ \\
+\hline $100kHz$ & $(1.89 \pm 0.10) rad$ & $(200 \pm 8.8) mV$ & $ (140.0 \pm 2.2)10^{-2} $ & $(280 \pm 10) mV$ \\
+\hline $300kHz$ & $(3.77 \pm 0.17) rad$ & $(200 \pm 8.8) mV$ & $ (360 \pm)10^{-3} $ & $(72.0 \pm 3.4) mV$ \\
+\hline $1MHz$ & $(3.14 \pm 0.19) rad$ & $(200 \pm 8.8) mV$ & $ (45 \pm 1.1)10^{-3} $ & $(9.00 \pm 0.67) mV$ \\
 \hline
 \end{tabular}
 \end{table}
