Messi a posto valori tabella ampli non invertente con elementi reattivi (aggiunti valori calcolati, portati a dB i valori misurati); aggiunto script per calcolo valore e incertezza teorico

--- a/Relazione.tex
+++ b/Relazione.tex
@@ -112,42 +112,26 @@ Per effettuare queste nuove misure è necessario ricofigurare la posizione degli
 \subsubsection{Tabella delle misure}
 
 % tabella aggiunta da elia
-
+Tabella:\\
 \begin{table}[]
 \centering
-\caption{My caption}
 \label{my-label}
 \renewcommand{\arraystretch}{1.5}
-\begin{tabular}{|c|c|c|c|c|}
-\hline $\textbf{f}$ & $\textbf{\Delta_\phi}$ & $|\textbf{A_v}| \ \textbf{calcolato}$ & $|\textbf{A_v}| \ \textbf{misurato}$ & $\textbf{V_u}$\\
-\hline $300Hz$ & $(1.21 \pm 0.06)*10^{-3} rad$ & $(980 \pm 39) mV$ & $ (2.24 \pm 0.28) $ & $(2.20 \pm 0.09) V$ \\
-\hline $1kHz$ & $(7.54 \pm 0.46)*10^{-4} rad$ & $(980 \pm 39) mV$ & $ (5.82 \pm 0.45) $ & $(5.70 \pm 0.21) V$ \\
-\hline $3kHz$ & $(1.70 \pm 0.22)*10^{-4} rad$ & $(980 \pm 39) mV$ & $ (7.96 \pm 0.57) $ & $(7.80 \pm 0.25) V$ \\
-\hline $10kHz$ & $(5.03 \pm 0.22)*10^{-1} rad$ & $(980 \pm 39) mV$ & $ (7.24 \pm 0.51) $ & $(7.10 \pm 0.23) V$ \\
-\hline $30kHz$ & $(1.13 \pm 0.06) rad$ & $(980 \pm 39) mV$ & $ (4.08 \pm 0.34) $ & $(4.00 \pm 0.18) V$ \\
-\hline $100kHz$ & $(1.89 \pm 0.10) rad$ & $(200 \pm 8.8) mV$ & $ (140.0 \pm 2.2)10^{-2} $ & $(280 \pm 10) mV$ \\
-\hline $300kHz$ & $(3.77 \pm 0.17) rad$ & $(200 \pm 8.8) mV$ & $ (360 \pm)10^{-3} $ & $(72.0 \pm 3.4) mV$ \\
-\hline $1MHz$ & $(3.14 \pm 0.19) rad$ & $(200 \pm 8.8) mV$ & $ (45 \pm 1.1)10^{-3} $ & $(9.00 \pm 0.67) mV$ \\
+\begin{tabular}{|c|c|c|c|}
+\hline \large{$f$} & \large{$\Delta_\phi$} & \large{${|A_v|}_{calcolato}$} & \large{${|A_v|}_{misurato}$}
+\\
+\hline $300Hz$ & $(1.21 \pm 0.06)*10^{-3} rad$ & $(7.1 \pm 3.2) $ & $ (7.00 \pm 0.70) $ \\
+\hline $1kHz$ & $(7.54 \pm 0.46)*10^{-4} rad$ & $(15.52 \pm 3.9)$ & $ (15.30 \pm 0.67) $ \\
+\hline $3kHz$ & $(1.70 \pm 0.22)*10^{-4} rad$ & $(18.6 \pm 5.0)$ & $ (18.02 \pm 0.62) $ \\
+\hline $10kHz$ & $(5.03 \pm 0.22)*10^{-1} rad$ & $(17.9 \pm 5.8)$ & $ (17.20 \pm 0.63) $ \\
+\hline $30kHz$ & $(1.13 \pm 0.06) rad$ & $(12.8 \pm 6.9)$ & $ (12.21 \pm 0.74) $ \\
+\hline $100kHz$ & $(1.89 \pm 0.10) rad$ & $(3.32 \pm 7.3)$ & $ (2.92 \pm 0.69) $ \\
+\hline $300kHz$ & $(3.77 \pm 0.17) rad$ & $(-6.12 \pm 7.38)$ & $ (-8.87 \pm 0.79) $ \\
+\hline $1MHz$ & $(3.14 \pm 0.19) rad$ & $(-16.57 \pm 7.38)$ & $ (-26.9 \pm 1.0) $ \\
 \hline
 \end{tabular}
 \end{table}
 
-% tabella vecchia
-
-\subsection{Misure in frequenza}
-\subsubsection{Tabella delle misure}
-\large \begin{tabbing}
-100kHz \= $(1.00 \pm 0.00) * 10^{-nn} rad$ \= $(1.00 \pm 0.00) * 10^{-nn} V$ \= $(1.00 \pm 0.00) * 10^{-nn} V$ \kill
- $f$ \> $\delta\phi$ \> $V_s$ \> $V_{u}$ \\
-$300Hz$ \> $(1.21 \pm 0.06)*10^{-3} rad$ \> $(980 \pm 39) mV$ \> $(2.20 \pm 0.09) V$ \\
-$1kHz$ \> $(7.54 \pm 0.46)*10^{-4} rad$ \> $(980 \pm 39) mV$ \> $(5.70 \pm 0.21) V$ \\
-$3kHz$ \> $(1.70 \pm 0.22)*10^{-4} rad$ \> $(980 \pm 39) mV$ \> $(7.80 \pm 0.25) V$ \\
-$10kHz$ \> $(5.03 \pm 0.22)*10^{-1} rad$ \> $(980 \pm 39) mV$ \> $(7.10 \pm 0.23) V$ \\
-$30kHz$ \> $(1.13 \pm 0.06) rad$ \> $(980 \pm 39) mV$ \> $(4.00 \pm 0.18) V$ \\
-$100kHz$ \> $(1.89 \pm 0.10) rad$ \> $(200 \pm 8.8) mV$ \> $(280 \pm 10) mV$ \\
-$300kHz$ \> $(3.77 \pm 0.17) rad$ \> $(200 \pm 8.8) mV$ \> $(72.0 \pm 3.4) mV$ \\
-$1MHz$ \> $(3.14 \pm 0.19) rad$ \> $(200 \pm 8.8) mV$ \> $(9.00 \pm 0.67) mV$ \\
-\end{tabbing}
 \subsubsection{Note}
 Abbiamo riscontrato un elevato livello di rumore con le misure prese ad una frequenza di 1MHz, già a 300KHz si riscontravano alcuni disturbi.
 \subsection{Confronto valori teorici e valori ottenuti dalle misure}
